force-app/main/default/objects/NEPA_Layer_Discipline__mdt/NEPA_Layer_Discipline__mdt.object-meta.xml
<CustomObject>
    <label>NEPA Layer Discipline</label>
    <pluralLabel>NEPA Layer Disciplines</pluralLabel>
    <description>Maps each NEPA_GIS_Layer__mdt DeveloperName to the specialist discipline, WorkType (VisitType), Visit template fields, and discipline-specific Action Plan Template. CMT-driven routing — add a new record to extend coverage to a new protection layer without modifying flows. Discipline__c must exactly match ServiceResource.nepa_discipline__c for the team assembly flow to find the right resource.</description>
</CustomObject>