force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>When false, this layer-to-discipline mapping is skipped by NEPA_Team_Assembly_Orchestrator. Use to disable a mapping without deleting the record — preserves configuration history.</description>
</CustomField>