force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/APT_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Developer_Name__c</fullName>
    <label>APT Developer Name</label>
    <type>Text</type>
    <length>80</length>
    <description>DeveloperName of the discipline-specific Action Plan Template to fire when a Work Order for this discipline is created (Status = New, nepa_auto_generated__c = true). Read by NEPA_WO_Milestone_Setter flow. Leave blank if no APT applies to this discipline.</description>
</CustomField>