force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <type>Text</type>
    <length>100</length>
    <description>Specialist discipline required for field review of this protection layer. Must exactly match ServiceResource.nepa_discipline__c. Used by NEPA_Team_Assembly_Orchestrator to find the right resource via Get Records filter. Example values: Hydrologist, Wildlife Biologist (Sage-Grouse), Geologist, Botanist, NEPA Specialist.</description>
</CustomField>