force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/GIS_Layer_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>GIS_Layer_Developer_Name__c</fullName>
    <label>GIS Layer Developer Name</label>
    <type>Text</type>
    <length>80</length>
    <description>Must exactly match the DeveloperName of a NEPA_GIS_Layer__mdt record. This is the foreign key used by NEPA_Team_Assembly_Orchestrator to route a detected protection layer to the correct specialist discipline. Case-sensitive.</description>
</CustomField>