force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/Is_Hard_Gate__c.field-meta.xml
<CustomField>
    <fullName>Is_Hard_Gate__c</fullName>
    <label>Is Hard Gate</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When true, the Visit created for this discipline blocks stage advancement on the parent IndividualApplication until marked Completed. NEPA_Visit_Survey_Window_Setter copies this value to Visit.nepa_hard_gate__c at insert time. Disciplines with extraordinary-circumstances potential (wetlands, critical habitat) should be flagged true.</description>
</CustomField>