force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Controls the order in which disciplines are assembled when multiple protection layers are detected. Lower numbers assemble first. Suggested ordering: 10=Hydrologist, 20=Wildlife, 30=Geologist, 40=Botanist, 50=Aquatic, 60=Avian/Big Game, 70=NEPA Specialist.</description>
</CustomField>