force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/WO_Description_Template__c.field-meta.xml
<CustomField>
    <fullName>WO_Description_Template__c</fullName>
    <label>WO Description Template</label>
    <type>LongTextArea</type>
    <length>1024</length>
    <description>Template for Visit.Description. Supports {LayerLabel} and {ProjectName} substitution tokens. Should include regulatory trigger context, survey scope, and applicable statutes (e.g., ESA Section 7, CWA Section 404, MBTA).</description>
</CustomField>