force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/WO_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>WO_Duration_Minutes__c</fullName>
    <label>WO Duration Minutes</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Default Visit duration in minutes. Used by NepaLayerDisciplineResolver when creating field survey Visits. Field coordinators can adjust the duration on individual Visits after creation. Example: 480 = one full field day.</description>
</CustomField>