force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/WO_Priority__c.field-meta.xml
<CustomField>
    <fullName>WO_Priority__c</fullName>
    <label>WO Priority</label>
    <type>Text</type>
    <length>10</length>
    <description>WorkOrder.Priority to set at creation. Must be a valid picklist value: High or Normal. Layers with extraordinary-circumstances potential (wetlands, critical habitat) default to High; informational layers (EJScreen) default to Normal.</description>
</CustomField>