force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/WO_Subject_Template__c.field-meta.xml
<CustomField>
    <fullName>WO_Subject_Template__c</fullName>
    <label>WO Subject Template</label>
    <type>Text</type>
    <length>255</length>
    <description>Template string for WorkOrder.Subject. Supports {LayerLabel} and {ProjectName} as substitution tokens, replaced at Work Order creation time. Example: "Hydrology and Water Quality Assessment - {ProjectName}".</description>
</CustomField>