force-app/main/default/objects/NEPA_Layer_Discipline__mdt/fields/Work_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Developer_Name__c</fullName>
    <label>Work Type Developer Name</label>
    <type>Text</type>
    <length>80</length>
    <description>Matches WorkType.ExternalId for the field survey Work Order type to create. Used by NEPA_Work_Order_Generator to look up the correct WorkType record. Example: DEMO_WT_001 (Hydrology and Water Quality Assessment).</description>
</CustomField>